Fixed spacing between profile Detail and about text

--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -212,7 +212,7 @@ nav li a {
 
 #about-me .row-one,
 #about-me .row-two {
-    margin-bottom: 45px;
+    margin-bottom: 80px;
 }
 
 #about-me .row-three {
